--- a/ViewsAsCompression.tex
+++ b/ViewsAsCompression.tex
@@ -73,7 +73,7 @@ not exhousted it is usually the most expensive part of operating the
 system, both in terms of data-communication costs and in terms of
 battery life.
 
-It is therefor very desirable to design a system which operates in
+It is therefor desirable to design a system which operates in
 such a way as to minimize the amount of communication between the
 sensors and the compute nodes. A common approach is to use {\em
   lossless compression}. This is a good solution when possible, but it
@@ -90,25 +90,57 @@ data) is enough to achieve low expected {\em distortion}. The
 foundational theory of lossy compression is Shannon's Rate-Distortion
 theory, which characterizes the achievable rate-distortion pairs.
 
-The way in which distortion is measured is sometimes of critical
-importance. For example the use of {\em perceptual coding} in MP3
-reduces the number of bit devoted to encoding frequencies to which the
-human ear is less sensitive.
-
-The basic idea behind this work is that the data coming from sensors
-about a PS can usually be seen as a sum of two parts: signal and
-noise. Usually written as:
+The reason that lossy compression methods are effective is that not
+all of the bits in the digital representation of the sensor
+measurements are equally important. A common model of real-world
+mesurements considers them to be the sum of a {\em signal} and {\em
+  noise}. Where the signal represents the physical quantity measured
+by the sensor while noise corresponds to the undesirable external 
+and internal influences that cause errors in the
+measurements. Noise is often modeled as ``Gaussian White Noise''
+(which can be formalized by Using Weiner processes). A raw signal $f$
+is usually represented as
 \[
 f(t) = s(t)+\sigma(t) w(t)
 \]
 where $s(t)$ is the signal as a function of time $w(t)$ is white
-noise and $\sigma(t)$ is the amplitude of the noise. White noise is
-not compressable, in other words, no method of coding can decrease the
-bandwidth required to send it. Happily, white noise also carries no
-useful information about the PS, only $s(t)$ and $\sigma(t)$ carry
-useful information. In addition, $s(t)$ and $\sigma(t)$ are usually
-highly compressible. This notion can be formalized in a general way
-using Kolmogorov Sufficient Statistics.
+noise and $\sigma(t)$ is the amplitude of the noise.
+
+It is interesting to note that the Shannon information content of
+white noise is typically much larger than that of the signal. As a
+result, most of the bits used in a lossless compression of the raw
+signal will be devoted to the noise! Lossy compression achieves two
+things at once: a better compression ratio than lossless compression
+and a reconstructed signal that is a cleaner version of the raw
+signal.
+
+The idea of partitioning data into signal and noise, which is common
+practice in signal processing. Can be generalized by using the concept
+of The Kolmogorov Sufficient Statistic. We describe this notion in
+detail below. For this introduction, we present a high level
+view. Using the method of Kolmogorov sufficient statistic one can
+represent any signal using a two part code $(A,r)$ where $A$ is a
+computer program and $r$ is an {\em uncompressible} binary
+sequence. In the Kolmogorov view of randomness, an uncompressible
+sequence is equivalent to a random sequence. We can therefor equate
+the program with the signal and $r$ with the noise. While changing $r$
+will definitely change the reconstructed sequence, it will change it
+in a way that is {\em unconsequential} from a statistical point of
+view. We can therefor encode the sequence $s$ using $A$ and will not
+be losing any statistically significant information.
+ 
+\iffalse
+For now we give an intuitive description. The better
+known concept of Kolomogorov complexity quantifies the complexity of a
+binary sequence by the length of the shortest program that generates
+this sequence.  To define the Kolmogorov Sufficient Statistic we
+consider encodings that consist of two parts: a program and an
+index. The program is one which can generate any sequence $s$ in a set $S$
+of sequence. The index points to a particular sequence in the set. As
+the size of the set $S$ is $|S|$, the index requires $\log_2(|S|)$
+bits. The algorithm recieves as input the index and it outputs $s$.
+We define the 
+\fi
 
 Our plan is therefor to partition the signal from a sensor (or a set
 of sensors) into the useless and uncompressible noise part and the
@@ -125,23 +157,31 @@ decompressing.
   $R^d$ with agreed upon names for the coordinates. Time is always a
   coordinate. Other possible coordinates define the {\em state} which
   includes quantities such as location, temperature, angle, speed etc. 
-\item A {\em trajectory} is a mapping from (real) time to (real) state.
-\item Let ${\cal M}$ be the {\em Model Class}. The model class defines
-  the set of allowable trajectories. In other words, it defines what
-  the physical system can do.
-\item Let $X$ be the raw data. The raw data is a table. The
-  coordinates are columns with continuous values.
-\item $Y=V(X)$ is an {\em approximate view} or a {\em model} of
-  $X$. The model defines a trajectory in the model class.
-\item $l(X),l(Y)$ are the respective sizes of $X$ and $Y$ in bits.
-\item A query to a model has the form $A=Q(V(X),\vec{p})$ where
-  $\vec{p}$ is a coordinate vector.
-\item The distortion of a model is measured by making queries to
-  $V(X)$ the reconstruct the rows of $X$. The distortion is the
-  distance between the $X$ and it's reconstruction. (When sensors are
-  noisy, the reconstruction might actually be {\em better} than the
-  raw data. I have yet to figure out how to quantify that).
-
+\item The {\em raw data} is a database table which we denote by
+  $X$. Each row in the table represents a single measurement. The raw
+  has time as one of the fields. We denote the {\em Schema} of $X$ by $S$.
+\item An {\em approximate view} or a {\em model} $M$ of $X$ is a
+  representation of a distribution over instances of the Schema $S$.
+\item The model is represented by a program which, given a binary
+  sequence, generates a table according to the schema $S$.
+\item We say that the model is accurate if there is no program that
+  can distinguish between the original table $X$ and a table $X$
+  generated by feeding the model with a random binary
+  sequence.\footnote{This definition depends on the computational
+    model, the ideal is to use the Kolmogorov Definition, but that is
+    not practical. A more practical approach would be to use
+    computational models of pseudo-randomness (Russel). The truly
+    practical methods would be domain-specific and will probably use
+    statistical tests or notions of distortion (a-la lossy
+    compression)}
+\item The ability to generate a table that is statistically
+  indistinguishable from the original table is the basic requirements
+  that all views have to satisfy. The basic protocol is: the view
+  generates a randomized table, and the user computes whatever they
+  need to from that table. However, in many cases it is faster to
+  compute the answers to queries directly from the model $M$, without
+  generating a random sample. The view can provide a mechanism to
+  answer such queries directly.
 \end{enumerate}
 
 Example: Suppose the raw data is the GPS data from a cellphone
